fix naming gen
