# api/docs/swagger.yaml
@@ -9,8 +9,7 @@ definitions:
         description: DisplayName holds the value of the "display_name" field.
         type: string
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.AdminEdges'
+        $ref: '#/definitions/ent.AdminEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the AdminQuery when eager-loading is set.
@@ -33,8 +32,7 @@ definitions:
         description: DisplayName holds the value of the "display_name" field.
         type: string
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.AdminEdges'
+        $ref: '#/definitions/ent.AdminEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the AdminQuery when eager-loading is set.
@@ -48,41 +46,23 @@ definitions:
         description: Username holds the value of the "username" field.
         type: string
     type: object
-  dto.AuthRequest:
+  dto.LoginRequest:
     properties:
-      createdAt:
-        description: CreatedAt holds the value of the "created_at" field.
+      password:
         type: string
-      id:
-        description: ID of the ent.
-        type: integer
-      name:
-        description: Name holds the value of the "name" field.
-        type: string
-      updatedAt:
-        description: UpdatedAt holds the value of the "updated_at" field.
+      username:
         type: string
     type: object
-  dto.AuthResponse:
+  dto.LoginResponse:
     properties:
-      createdAt:
-        description: CreatedAt holds the value of the "created_at" field.
+      token:
         type: string
-      id:
-        description: ID of the ent.
-        type: integer
-      name:
-        description: Name holds the value of the "name" field.
-        type: string
-      updatedAt:
-        description: UpdatedAt holds the value of the "updated_at" field.
-        type: string
+      user: {}
     type: object
   dto.PermissionRequest:
     properties:
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.PermissionEdges'
+        $ref: '#/definitions/ent.PermissionEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the PermissionQuery when eager-loading is set.
@@ -102,8 +82,7 @@ definitions:
   dto.PermissionResponse:
     properties:
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.PermissionEdges'
+        $ref: '#/definitions/ent.PermissionEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the PermissionQuery when eager-loading is set.
@@ -126,8 +105,7 @@ definitions:
         description: CreatedAt holds the value of the "created_at" field.
         type: string
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.RoleEdges'
+        $ref: '#/definitions/ent.RoleEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the RoleQuery when eager-loading is set.
@@ -147,8 +125,7 @@ definitions:
         description: CreatedAt holds the value of the "created_at" field.
         type: string
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.RoleEdges'
+        $ref: '#/definitions/ent.RoleEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the RoleQuery when eager-loading is set.
@@ -201,8 +178,7 @@ definitions:
         description: DisplayName holds the value of the "display_name" field.
         type: string
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.AdminEdges'
+        $ref: '#/definitions/ent.AdminEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the AdminQuery when eager-loading is set.
@@ -227,8 +203,7 @@ definitions:
   ent.Permission:
     properties:
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.PermissionEdges'
+        $ref: '#/definitions/ent.PermissionEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the PermissionQuery when eager-loading is set.
@@ -259,8 +234,7 @@ definitions:
         description: CreatedAt holds the value of the "created_at" field.
         type: string
       edges:
-        allOf:
-        - $ref: '#/definitions/ent.RoleEdges'
+        $ref: '#/definitions/ent.RoleEdges'
         description: |-
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the RoleQuery when eager-loading is set.
@@ -305,65 +279,6 @@ info:
   title: GVA API
   version: "1.0"
 paths:
-  /Auth/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get a Auth by ID
-      operationId: get-Auth-by-id
-      parameters:
-      - description: Auth ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/request.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.AuthResponse'
-              type: object
-      summary: Get a Auth
-      tags:
-      - Auth
-    patch:
-      consumes:
-      - application/json
-      description: Update a Auth by ID
-      operationId: update-Auth-by-id
-      parameters:
-      - description: Auth ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Auth data
-        in: body
-        name: Auth
-        required: true
-        schema:
-          $ref: '#/definitions/dto.AuthRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully updated Auth
-          schema:
-            allOf:
-            - $ref: '#/definitions/request.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.AuthResponse'
-              type: object
-      summary: Update a Auth
-      tags:
-      - Auth
   /Todo/{id}:
     get:
       consumes:
@@ -556,32 +471,10 @@ paths:
       tags:
       - Admin
   /auth:
-    get:
-      consumes:
-      - application/json
-      description: Get a list of all Auths
-      operationId: list-all-Auths
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully retrieved Auths
-          schema:
-            allOf:
-            - $ref: '#/definitions/request.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/dto.AuthResponse'
-                  type: array
-              type: object
-      summary: List all Auths
-      tags:
-      - Auth
     post:
       consumes:
       - application/json
-      description: Create a new Auth with the provided details
+      description: Authenticate a admin with the provided credentials
       operationId: create-Auth
       parameters:
       - description: Auth data
@@ -589,7 +482,7 @@ paths:
         name: Auth
         required: true
         schema:
-          $ref: '#/definitions/dto.AuthRequest'
+          $ref: '#/definitions/dto.LoginRequest'
       produces:
       - application/json
       responses:
@@ -600,31 +493,9 @@ paths:
             - $ref: '#/definitions/request.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.AuthResponse'
+                  $ref: '#/definitions/dto.LoginResponse'
               type: object
-      summary: Create a Auth
-      tags:
-      - Auth
-  /auth/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a Auth by ID
-      operationId: delete-Auth-by-id
-      parameters:
-      - description: Auth ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully deleted Auth
-          schema:
-            $ref: '#/definitions/request.Response'
-      summary: Delete a Auth
+      summary: Authenticate a admin
       tags:
       - Auth
   /permission:
